feat: 유효성 검사 및 폰트 변경

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Nanum Myeongjo", serif;
+  font-style: normal;
+}
+
 :root {
   --primary-100: #0d6e6e;
   --primary-200: #4a9d9c;
@@ -39,6 +44,28 @@ h2 {
   font-weight: bolder;
 }
 
+.add-todo {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 15px 0px 15px;
+  padding: 5px 10px 5px 10px;
+  border: 2px solid black;
+  border-radius: 12px;
+  color: var(--text-100);
+  background-color: var(--bg-200);
+}
+
+.content-add {
+  display: flex;
+  justify-content: space-between;
+}
+
+.check-content {
+  display: none;
+  color: red;
+  margin: -15px 0px 5px 15px;
+}
+
 .title-input {
   width: 200px;
   height: 30px;
@@ -60,18 +87,6 @@ h2 {
   border: 5px solid var(--accent-200);
   height: 50px;
   margin-top: 8px;
-}
-
-.add-todo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 5px 15px 0px 15px;
-  padding: 5px 10px 5px 10px;
-  border: 2px solid black;
-  border-radius: 12px;
-  color: var(--text-100);
-  background-color: var(--bg-200);
 }
 
 .todolist {
