--- a/src/App.css
+++ b/src/App.css
@@ -105,10 +105,10 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  border: 1px solid var(--bg-200);
+  border: 2px solid var(--bg-100);
   border-radius: 12px;
   width: 270px;
-  background-color: var(--primary-100);
+  background-color: var(--bg-200);
   color: var(--text-200);
   margin-bottom: 10px;
   padding: 0px 10px 0px 10px;
