--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,16 @@
 }
 
 :root {
-  --primary-100: #0d6e6e;
-  --primary-200: #4a9d9c;
-  --primary-300: #afffff;
-  --accent-100: #ff3d3d;
-  --accent-200: #ffe0c8;
+  --primary-100: #0085ff;
+  --primary-200: #69b4ff;
+  --primary-300: #e0ffff;
+  --accent-100: #cc2936;
+  --accent-200: #00668c;
   --text-100: #ffffff;
-  --text-200: #e0e0e0;
-  --bg-100: #0d1f2d;
-  --bg-200: #1d2e3d;
-  --bg-300: #354656;
+  --text-200: #9e9e9e;
+  --bg-100: #1e1e1e;
+  --bg-200: #2d2d2d;
+  --bg-300: #454545;
 }
 
 body {
@@ -21,7 +21,7 @@ body {
 }
 
 h2 {
-  color: var(--text-200);
+  color: var(--text-100);
   margin-left: 15px;
 }
 
@@ -39,7 +39,7 @@ h2 {
   padding: 0px 10px 0px 10px;
   border: 2px solid black;
   border-radius: 12px;
-  color: var(--text-200);
+  color: var(--text-100);
   background-color: var(--bg-200);
   font-weight: bolder;
 }
@@ -70,23 +70,26 @@ h2 {
   width: 200px;
   height: 30px;
   border-radius: 12px;
-  background-color: var(--primary-300);
+  background-color: var(--bg-300);
+  color: var(--text-100);
 }
 
 .content-input {
   width: 300px;
   height: 30px;
   border-radius: 12px;
-  background-color: var(--primary-300);
+  background-color: var(--bg-300);
+  color: var(--text-100);
 }
 
 .add-btn {
   border-radius: 8px;
-  background-color: var(--accent-200);
+  background-color: white;
   font-weight: bolder;
-  border: 5px solid var(--accent-200);
+  border: 5px solid white;
   height: 50px;
   margin-top: 8px;
+  color: var(--bg-300);
 }
 
 .todolist {
@@ -109,7 +112,7 @@ h2 {
   border-radius: 12px;
   width: 270px;
   background-color: var(--bg-200);
-  color: var(--text-200);
+  color: var(--text-100);
   margin-bottom: 10px;
   padding: 0px 10px 10px 10px;
 }
@@ -128,14 +131,16 @@ h2 {
 
 .done-btn {
   border-radius: 8px;
-  border: 5px solid var(--accent-200);
-  background-color: var(--accent-200);
+  border: 5px solid white;
+  background-color: white;
   font-weight: bolder;
+  color: var(--bg-300);
 }
 
 .cancle-btn {
   border-radius: 8px;
-  border: 5px solid var(--accent-200);
-  background-color: var(--accent-200);
+  border: 5px solid white;
+  background-color: white;
   font-weight: bolder;
+  color: var(--bg-300);
 }
